--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "react-scripts": "^5.0.1",
     "sass": "^1.38.0",
     "styled-components": "^6.0.0",
-    "tslint-plugin-cypress": "^1.0.4",
     "typescript": "^5.0.0",
     "utm": "^1.1.1",
     "web-vitals": "^3.1.1",
@@ -69,8 +68,8 @@
   },
   "scripts": {
     "start": "craco start",
-    "start:dev": "craco -r @cypress/instrument-cra start",
     "build": "craco --max_old_space_size=4096 build",
+    "start:dev": "craco start",
     "build-with-version": "export REACT_APP_TERRAWARE_FE_BUILD_VERSION=$(git rev-parse --short HEAD) && craco build",
     "build-version-file": "echo $(git rev-parse --short HEAD) > public/build-version.txt",
     "test": "TZ=America/Los_Angeles craco test",
@@ -79,10 +78,6 @@
     "generate-collateral": "yarn build-version-file && yarn generate-strings",
     "generate-strings": "node scripts/generate-strings.js",
     "generate-types": "node scripts/openapi-typescript-formatter.mjs",
-    "cy:run": "TZ=UTC cypress run",
-    "cy": "TZ=UTC cypress open",
-    "e2e": "NODE_OPTIONS=--max-old-space-size=3172 start-server-and-test start:dev http://127.0.0.1:3000 cy:run && yarn e2e:report",
-    "e2e:report": "npx nyc report --reporter=text",
     "license-report": "license-report --only=prod --department.value=terraware --relatedTo.value=terraware-web --output=html > docs/license-report.html",
     "lint": "tslint --project tsconfig.json",
     "ts": "tsc --project ./tsconfig.json",
@@ -94,7 +89,9 @@
     "server:reset": "./scripts/resetdb.sh",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "pre-commit": "yarn format && yarn lint && yarn ts && yarn test && yarn build"
+    "pre-commit": "yarn format && yarn lint && yarn ts && yarn test && yarn build",
+    "playwright:run": "yarn run playwright test playwright/e2e",
+    "test:e2e": "NODE_OPTIONS=--max-old-space-size=16384 start-server-and-test start http://127.0.0.1:3000 playwright:run"
   },
   "eslintConfig": {
     "extends": [
@@ -122,8 +119,7 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.0.0",
-    "@cypress/code-coverage": "^3.10.0",
-    "@cypress/instrument-cra": "^1.4.0",
+    "@playwright/test": "^1.40.1",
     "@storybook/addon-essentials": "^7.0.12",
     "@storybook/addon-interactions": "^7.0.12",
     "@storybook/addon-links": "^7.0.12",
@@ -136,7 +132,6 @@
     "babel-plugin-named-exports-order": "^0.0.2",
     "btoa": "^1.2.1",
     "csv": "^6.2.8",
-    "cypress": "^13.0.0",
     "eslint-plugin-storybook": "^0.6.15",
     "esm": "^3.2.25",
     "express": "^4.18.2",
@@ -146,6 +141,7 @@
     "jest-mock-extended": "^3.0.1",
     "nyc": "^15.1.0",
     "openapi-typescript": "^6.7.3",
+    "playwright": "^1.40.1",
     "prettier": "^3.0.3",
     "prop-types": "^15.8.1",
     "react-test-renderer": "17.0.2",
