--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -92,6 +92,9 @@ jobs:
           REACT_APP_TERRAWARE_API: 'http://localhost:8080'
           REACT_APP_SNACKBAR_TIMEOUT: 1000
           REACT_APP_TERRAWARE_FE_BUILD_VERSION: ${{ env.APP_VERSION }}
+
+      - name: save screenshots of e2e test failures
+        if: always()
         uses: actions/upload-artifact@v3
         with:
           name: playwright-report
