--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -93,6 +93,10 @@ jobs:
           REACT_APP_SNACKBAR_TIMEOUT: 1000
           REACT_APP_TERRAWARE_FE_BUILD_VERSION: ${{ env.APP_VERSION }}
 
+      - name: save server logs
+        if: always()
+        run: docker logs terraware-web_terraware-server_1 > playwright-report/server_log.txt
+
       - name: save screenshots of e2e test failures
         if: always()
         uses: actions/upload-artifact@v3
